lab1/Test/L1-A-7-34.output
Error Type A at Line 3
Error Type A at Line 19
Error Type A at Line 20
Error Type A at Line 24
Error Type A at Line 30
