lab1/Test/L1-A-7-34.cmm
struct JuVrcRWCPMqVels {
  float CD5K1jhvkYKw8PU7 = aTrmneybJ4nD6mgWS8FA > 
    WG5Ql + y4XyglmN * _hexTUnU68V5U2s5A0 [ 'jx_fsQ8iK_ 
    = k || eLESfToEsiXTq34 && T3ehgiOrK == - jxw6EldykFFpmreBwmd 
    ( zOd8qctFlXmLU >= XJKng + U_RAPbwpaBb0zLd * ! ( zpUvuhvX5Z17YJ3h 
    != gbuEdlvyv / ZdV5jlxC ( L12t7YY28J6qcBHZW6 , ByU8egf5 
    + GFMhYXx1pF * t ( POEFXPYn_M12Pf || cjEOK && XN9 
    < LJBrnM ) ) * ! Cy6_kP7Uwa / mMvI8WusPSMrP <= QGwRj2xRxEZdEiK 
    + 1127729464 + - ! WGw6 ) ) - 1990188086.77007684 
    / ! - RatiUTWVWBpn ( ) ] . wLar8hP8ZuIEg ;
}OpxU , khtCV [ 1558144288 ] 

;
int ;
int ga8SuFXKUs ( int k580 , int VoX ) {
  struct {
    struct Fy2TjI956zz BBKUjRYjo ;
    int l3 ;
  }:OQfNokIPz ;
  struct dV0cPgA3uM8Psul5IY &SK98MteCzSpsk ;
  int jKvV6NVz8AZPxR ;
  int b ;
{
    int U ~, Emwx6rJ6g , wHbiME8rQyrG0Tq3fA ;
  }}
int qCMxhuN2_Iqkfnt ( ) {
  fEDLMNz6p8kT ;
  if ( b8YN52FZfexSkr17g )   yTLD8KEfW0JarYbYXJyQ 
    ;
else %  VapJn10IWz_HlLNRf ;

  if ( Kb )   while ( VgADcIfee )   return o7AZAAZLEzb_ 
    ;

else   if ( tybK7wS5rX )   VxtzngfJUMMVIy5zey ;


}
